--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
-    <string name="app_name">TpIntegrador</string>
+    <string name="app_name"></string>
+    <string name="strCreateAccount"><u>Crear cuenta</u></string>
+    <string name="strForgotMyPassword"><u>Olvide mi contrasenia</u></string>
+    <string name="strCreateUser">Creando usuario</string>
+    <string name="strNameUser">Nombre de usuario</string>
+    <string name="strEmail">E-mail</string>
+    <string name="strPassword">Constrasenia</string>
+    <string name="strPasswordRepeat">Confirmar Constrasenia</string>
+    <string name="strCreateUserBtn">Crear usuario</string>
+    <string name="title_activity_hi_teacher">HiTeacher</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
 </resources>
