--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
+    //Text of test
+    <string name="textTest">High school</string>
+
+    //Text of Button
+    <string name="confirm">Confirm</string>
+    <string name="deleteCourse">Are you sure you want to delete this course?</string>
+    <string name="logOutSession">You want to close the session</string>
+    <string name="delete">Delete</string>
+    <string name="logOut">Log out</string>
+    <string name="cancel">Cancel</string>
 
     //Login
     <string name="app_name"></string>
