--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,10 +44,10 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="title_activity_page_course">PageCourse</string>
+    <string name="menu_home">My students</string>
+    <string name="menu_gallery">Take attendance</string>
+    <string name="menu_slideshow">Qualification</string>
+    <string name="title_activity_page_course">New school</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -70,4 +70,9 @@
     <string name="state">State:</string>
     <string name="update">Update</string>
     <string name="return_student">Return</string>
+    <string name="to_register">To register</string>
+    <string name="you_are_already_logged">You are already logged in, if you want to close the session keep pressing the create button</string>
+    <string name="photo">Photo</string>
+    <string name="select_photo">Cam</string>
+    <string name="cam">Cam</string>
 </resources>
