Se agrego fondo a los activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="title_activity_hi_teacher">HiTeacher</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_title">Welcome teacher</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
@@ -76,4 +76,5 @@
     <string name="select_photo">Cam</string>
     <string name="cam">Cam</string>
     <string name="courses">Courses</string>
+    <string name="create_new_password">Create new password</string>
 </resources>
